--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -3,8 +3,9 @@
 }
 
 .Home-logo {
-  height: 35vmin;
+  height: 25vmin;
   pointer-events: none;
+  border-radius: 20%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
