--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -7,26 +7,23 @@
   }
   
   .about-us-content {
-    max-width: 800px;
     padding: 40px;
   }
   
   .about-us-title {
-    font-size: 32px;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
+
   }
   
   .about-us-info {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 40px;
   }
   
   .about-us-section {
     padding: 20px;
-    border: 1px solid hsl(0, 0%, 80%);
-    border-radius: 8px;
   }
   
   .about-us-section-title {
